@@ -1,3 +1,8 @@
+2014-01-17  Corinna Vinschen  <vinschen@redhat.com>
+
+	* libc/include/pwd.h: Use __foo_VISIBLE macros from sys/cdefs.h.
+	(setpassent): Declare.
+
 2014-01-17  Sebastian Huber  <sebastian.huber@embedded-brains.de>
 
 	* libc/include/sys/_default_fcntl.h (LOCK_SH): Define.
